<resources>
    <string name="app_name">RoomCrudMarvel</string>
    <string name="noPersonajeLook">No hay personaje con esas letras</string>
    <string name="DeleteTitle">BORRAR</string>
    <string name="deleteBody">¿Seguro qué desea borrar este personaje?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="personaje">Personaje</string>
    <string name="comics">Comics</string>
    <string name="nombre">Nombre</string>
    <string name="id">ID</string>
    <string name="descripcion">Descripción</string>
    <string name="modificado">Modificado</string>
    <string name="imagenurl">Imagenurl</string>
    <string name="personajeEliminado">Personaje eliminado</string>
    <string name="UpdateExitoso">Personaje cambiada con éxito</string>
    <string name="nombre_comic">Nombre Comic</string>
    <string name="idcomic">IdComic</string>
    <string name="add_comic">Add Comic</string>
    <string name="addpersonaje">AddPersonaje</string>
    <string name="no_info_comic">No ha agregado información del comic</string>
    <string name="no_add_personaje">No se puede añadir personaje porque hay algun campo vacio, compruebalo.</string>
    <string name="imagen_add">http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg</string>
</resources>